--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
